--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">speedQuiz</string>
     <string name="main_titre">Speed Quiz</string>
+    <string name="main_txt_j1">Nom joueur 1</string>
+    <string name="main_txt_j2">Nom joueur 2</string>
 </resources>
