--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,17 @@
 <resources>
     <string name="app_name">speedQuiz</string>
-    <string name="main_titre">Speed Quiz</string>
-    <string name="nom_txt_j1">Nom joueur 1</string>
-    <string name="nom_txt_j2">Nom joueur 2</string>
+
+    <string name="start_titre">Speed Quiz</string>
+    <string name="start_nom_j1">Joueur 1</string>
+    <string name="start_nom_j2">Joueur 2</string>
+    <string name="start_bt_jouer">Jouer</string>
+    <string name="start_bt_annuler">Annuler</string>
+
+    <string name="quiz_nom_j1">Nom joueur 1</string>
+    <string name="quiz_nom_j2">Nom joueur 2</string>
+    <string name="quiz_bt_rej">Rejouer</string>
+    <string name="quiz_bt_menu">Menu</string>
+    <string name="quiz_qst_j">Question 1</string>
+    <string name="quiz_score_j1">12</string>
+    <string name="quiz_score_j2">30</string>
 </resources>
