--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="config_title">Configuration</string>
     <string name="config_titre_delais">Délais</string>
     <string name="config_titre_qst">Questions</string>
+    <string name="config_titre_nbr_qst">Nombre de questions</string>
     <string name="config_titre_qst_int">Intitulé</string>
     <string name="config_titre_qst_rep">Réponse</string>
     <string name="config_delais">3 s</string>
